Réglage des derniers bugs